TmsTestFolder API enhancements